--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "google-map-react": "^1.1.5",
     "react": "^16.11.0",
+    "react-burger-menu": "^2.6.12",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
